refatoração de codigo

--- a/src/app/pages/ncs/create/steps/step1/descricao-nc/descricao-nc.component.html
+++ b/src/app/pages/ncs/create/steps/step1/descricao-nc/descricao-nc.component.html
@@ -25,7 +25,7 @@
       >
         <input
           type="file"
-          accept=".pdf,image/jpeg,image/png"
+          accept=".pdf,image/jpeg,image/png,xlsx,xls"
           class="input-attachment"
           (change)="onUpload($event, 'evidenciasNc')"
           multiple
@@ -82,7 +82,7 @@
       >
         <input
           type="file"
-          accept=".pdf,image/jpeg,image/png"
+          accept=".pdf,image/jpeg,image/png,xlsx,xls"
           class="input-attachment"
           (change)="onUpload($event, 'evidenciasAcoes')"
           multiple
