--- a/src/app/pages/ncs/create/steps/step2/product/product.component.html
+++ b/src/app/pages/ncs/create/steps/step2/product/product.component.html
@@ -89,7 +89,4 @@
     </div>
   </div>
 </div>
-<app-product-info
-  [hasProduct]="nonComplicanceService.hasSelectedProduct"
-  [product]="nonComplicanceService.selectedProduct"
-></app-product-info>
+<app-product-info></app-product-info>
