--- a/src/app/pages/ncs/about/costs/costs.component.html
+++ b/src/app/pages/ncs/about/costs/costs.component.html
@@ -88,8 +88,45 @@
     <div class="editar-campo">
         <label for="name">Valor</label>
         <input
-                currencyMask [(ngModel)]="doc.name" [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }"
+                currencyMask [(ngModel)]="doc.price" [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }"
         />
+        <div class="mt-3">
+            <label>Anexar Documento</label>
+            <div class="div-attachment">
+                <h1>Anexar relatório de custos</h1>
+                <div
+                        class="white-background"
+                        *ngIf="!fileChosen"
+                >
+                    <input
+                            type="file"
+                            accept=".pdf"
+                            class="input-attachment"
+                            (change)="onUpload($event)"
+                    />
+                    <i class="pi pi-cloud-upload"></i>
+                    <p>
+                        Arraste e solte ou <strong>navegue para escolher</strong> um arquivo
+                    </p>
+                </div>
+                <div
+                        class="white-background-files"
+                        *ngIf="fileChosen"
+                >
+                    <button
+                            type="button"
+                            (click)="clearFile()"
+                            class="btn btn-light"
+                    >
+                        <i class="pi pi-replay"></i>
+                    </button>
+                    <p>
+                        {{ doc.name }}
+                    </p>
+                </div>
+            </div>
+        </div>
+
     </div>
     </ng-template>
     <ng-template pTemplate="footer">
@@ -97,6 +134,8 @@
             <button
                     type="button"
                     class="btn btn-dark"
+                    (click)="save()"
+                    [disabled]="doc.name==''||doc.price==''"
             >
                 Registrar Custo Incorrido <i class="bi bi-check2"></i>
             </button>
