--- a/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.html
+++ b/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.html
@@ -17,7 +17,7 @@
         Cancelar
         <i class="pi pi-times"></i>
       </button>
-      <button type="button" class="btn btn-dark mr-2" (click)="teste()">
+      <button type="button" class="btn btn-dark mr-2" (click)="salvarNc()">
         Salvar
         <i class="pi pi-save"></i>
       </button>
