--- a/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint.component.css
+++ b/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint.component.css
@@ -5,6 +5,9 @@
 .input-box input {
   width: 100%;
 }
+.content{
+  min-width: 430px;
+}
 .text-box span {
   opacity: 0.6;
 }
@@ -133,3 +136,4 @@ input{
   width: 100%;
   font-size: 14px;
 }
+
