começa a puxar dados da nc do back

--- a/src/app/pages/ncs/about/header/header.component.html
+++ b/src/app/pages/ncs/about/header/header.component.html
@@ -10,7 +10,7 @@
             </div>
             <p-chip>
                 <i class="bi bi-ticket-perforated mr-2"></i>
-                {{"001/2022"}}
+                {{aboutSrvc.nc?.code||""}}
             </p-chip>
         </div>
     </div>
