--- a/src/app/pages/ncs/about/view-nc/products-and-points/view-products-and-points.component.html
+++ b/src/app/pages/ncs/about/view-nc/products-and-points/view-products-and-points.component.html
@@ -24,7 +24,7 @@
         <div>
           <span class="info-titulo">Quantidade Total</span>
           <br />
-          <span class="info-dados">{{"0"}}</span>
+          <span class="info-dados">{{aboutSrvc.nc?.quant_total||""}}</span>
         </div>
       </div>
       <div class="contato-info d-flex flex-row">
@@ -32,7 +32,7 @@
         <div>
           <span class="info-titulo">Quantidade em Não Conformidade</span>
           <br />
-          <span class="info-dados">{{"0"}}</span>
+          <span class="info-dados">{{aboutSrvc.nc?.quant_nc||""}}</span>
         </div>
       </div>
       <div class="contato-info d-flex flex-row">
