--- a/src/app/pages/ncs/about/view-nc/stakeholders/view-stakeholders.component.html
+++ b/src/app/pages/ncs/about/view-nc/stakeholders/view-stakeholders.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <p-table [value]="this.contactsList">
+    <p-table [value]="this.aboutSrvc.nc?.contacts||[]">
         <ng-template pTemplate="header">
             <tr>
                 <th>Nome</th>
