--- a/src/app/pages/ncs/create/steps/step2/product/product-info/product-info.component.css
+++ b/src/app/pages/ncs/create/steps/step2/product/product-info/product-info.component.css
@@ -5,6 +5,7 @@
 }
 .product-box {
   background: #fff;
+  border-radius: 8px;
   margin-inline: 8px;
   margin-bottom: 8px;
 }
@@ -28,3 +29,91 @@
   color: #7d7d7d;
   font-weight: 700;
 }
+.header .button-box {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
+.header .button-box button {
+  width: 200px;
+}
+.text-box h3 {
+  font-weight: 700;
+  font-size: 28px;
+}
+.header .button-box span,
+.header .button-box i {
+  font-size: 12px;
+  color: #7d7d7d;
+}
+
+.cabecalho h1 {
+  font-size: 25px;
+  font-weight: 500;
+  margin-bottom: 0px;
+  margin-top: 0px;
+
+}
+
+.cabecalho p {
+  font-size: 14px;
+  color: gray;
+}
+.search-box {
+  display: flex;
+  align-items: end;
+  padding: 0;
+}
+.input-box label {
+  font-size: 13px;
+  font-weight: bold;
+}
+.autoComplete-item h4 {
+  font-size: 18px;
+  font-weight: 700;
+}
+.autoComplete-item span {
+  font-size: 12px;
+  font-weight: 700;
+  color: #b4b4b4;
+}
+.autoComplete-item p {
+  font-size: 18px;
+  font-weight: 400;
+  color: #7d7d7d;
+  white-space: normal !important;
+}
+
+.p-autocomplete {
+  border-radius: 5px;
+  border: 2px solid rgb(51, 51, 51);
+}
+
+.input {
+  border-radius: 5px;
+  border: 2px solid rgb(51, 51, 51);
+}
+.inputs-sm {
+  position: relative;
+  top: -12px;
+}
+.update-box {
+  display: flex;
+  flex-direction: column;
+}
+
+
+.att{
+  font-size: 11px;
+  color: gray;
+  margin: 0;
+}
+
+.inputs-sm label {
+
+  min-width: 200px;
+  font-size: 13px;
+  font-weight: bold;
+  margin-bottom: 2px;
+}
+
