criador logica para salvar ao avançar passos

--- a/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.html
+++ b/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.html
@@ -13,7 +13,7 @@
   </div>
   <div class="d-flex justify-content-end p-0">
     <div class="d-flex buttons">
-      <button type="button" class="btn btn-outline-dark mr-2">
+      <button type="button" (click)="openCancelDialog()" class="btn btn-outline-dark mr-2">
         Cancelar
         <i class="pi pi-times"></i>
       </button>
