--- a/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.html
+++ b/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.html
@@ -55,7 +55,7 @@
         <div>
           <span class="info-titulo">Emissor</span>
           <br />
-          <span class="info-dados">{{emissor}}</span>
+          <span class="info-dados">{{nonComplicanceService.nc.issuer!.username}}</span>
         </div>
       </div>
       <div class="contato-info d-flex flex-row">
