--- a/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
+++ b/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
@@ -65,52 +65,85 @@
     <div class="col-6 d-flex flex-row">
       <i class="pi pi-directions mr-1"></i>
       <div>
-        <span class="info-titulo">Instrução</span>
-        <br />
-        <p class="info-dados">
-          Lorem ipsum dolor sit amet, consectetur adipisicing e
-        </p>
-      </div>
-    </div>
-    <div class="d-flex flex-row">
-      <i class="bi bi-calculator mr-1"></i>
-      <div>
-        <span class="info-titulo">Número de Controle</span>
+        <span class="info-titulo">Tipo</span>
         <br />
         <p class="info-dados">
           {{
-            this.nonComplicanceService.controlNumber || "Dado não preenchido"
+          this.nonComplicanceService.nc?.tipo_controle || "Dado não preenchido"
+          }}
+        </p>
+      </div>
+    </div>
+    <div class="d-flex flex-row" *ngIf="this.nonComplicanceService.nc?.tipo_controle!='PR'">
+      <i class="bi bi-calculator mr-1"></i>
+      <div >
+        <span class="info-titulo">Número</span>
+        <br />
+        <p class="info-dados">
+          {{
+            (this.nonComplicanceService.nc?.num_op || this.nonComplicanceService.nc?.num_nota)|| "Dado não preenchido"
           }}
         </p>
       </div>
     </div>
   </div>
 </div>
-<div class="div-ident-parceiro mt-3">
+<div class="div-ident-parceiro row mt-3">
   <h2>
     <i class="bi bi-people"></i>
     Ponto de Rejeição
   </h2>
-  <div class="d-flex">
-    <div class="col-6 d-flex flex-row">
-      <i class="pi pi-directions mr-1"></i>
-      <div>
-        <span class="info-titulo">Instrução</span>
-        <br />
-        <p class="info-dados">
-          Lorem ipsum dolor sit amet, consectetur adipisicing e
-        </p>
+  <div class="dados-parceiro col razao-social">
+    <h2 class="mr-2">
+      Descrição
+    </h2>
+    <p-editor
+            [(ngModel)]="this.nonComplicanceService.nc.text_area_reject_point"
+            [style]="{ height: '144px', border: '1px solid #dddddd' }"
+            [readonly]="true"
+    >
+      <ng-template pTemplate="header" hidden> </ng-template>
+    </p-editor>
+  </div>
+  <div class="dados-parceiro col">
+    <div class="dados-contato">
+      <div class="contato-info d-flex flex-row" *ngIf="this.nonComplicanceService.nc?.num_lote">
+        <i class="bi bi-123"></i>
+        <div>
+          <span class="info-titulo">Número do Lote</span>
+          <br />
+          <span class="info-dados">{{
+            this.nonComplicanceService.nc?.num_lote || "0"
+            }}</span>
+        </div>
       </div>
-    </div>
-    <div class="d-flex flex-row">
-      <i class="bi bi-chat-text mr-1"></i>
-      <div>
-        <span class="info-titulo">Resposta</span>
-        <br />
-        <p class="info-dados">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        </p>
+      <div class="contato-info d-flex flex-row" *ngIf="this.nonComplicanceService.nc?.num_ordem_compra">
+        <i class="bi bi-123"></i>
+        <div>
+          <span class="info-titulo">Quantidade em Não Conformidade</span>
+          <br />
+          <span class="info-dados">{{
+            this.nonComplicanceService.nc?.num_ordem_compra || "0"
+            }}</span>
+        </div>
+      </div>
+      <div class="contato-info d-flex flex-row" *ngIf="this.nonComplicanceService.nc?.instruction?.code">
+        <i class="bi bi-123"></i>
+        <div>
+          <span class="info-titulo">Número da IT</span>
+          <br />
+          <span class="info-dados">{{ this.nonComplicanceService.nc?.instruction?.code || "0" }}</span>
+        </div>
+      </div>
+      <div class="contato-info d-flex flex-row" *ngIf="this.nonComplicanceService.nc?.procedure">
+        <i class="bi bi-123"></i>
+        <div>
+          <span class="info-titulo">Número PR</span>
+          <br />
+          <span class="info-dados">{{ this.nonComplicanceService.nc?.procedure?.code|| "0" }}</span>
+        </div>
       </div>
     </div>
   </div>
 </div>
+
