--- a/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
+++ b/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
@@ -4,18 +4,18 @@
     <div class="d-flex">
       <h2 class="mr-2">
         {{
-          this.nonComplicanceService.selectedProduct?.name ||
+          this.nonComplicanceService.nc?.product?.name ||
             "Dado não preenchido"
         }}
       </h2>
       <p-chip>
         <i class="bi bi-ticket-perforated mr-2"></i>
-        {{ this.nonComplicanceService.selectedProduct?.code || "000000" }}
+        {{ this.nonComplicanceService.nc?.product?.code  || "000000" }}
       </p-chip>
     </div>
     <p class="d-block">
       {{
-        this.nonComplicanceService.selectedProduct?.description ||
+      this.nonComplicanceService.nc?.product?.description ||
           "Dado não preenchido"
       }}
     </p>
@@ -65,13 +65,9 @@
     <div class="col-6 d-flex flex-row">
       <i class="pi pi-directions mr-1"></i>
       <div>
-        <span class="info-titulo">Tipo</span>
-        <br />
-        <p class="info-dados">
-          {{
+        <span class="info-titulo">{{
           this.nonComplicanceService.nc?.tipo_controle || "Dado não preenchido"
-          }}
-        </p>
+          }}</span>
       </div>
     </div>
     <div class="d-flex flex-row" *ngIf="this.nonComplicanceService.nc?.tipo_controle!='PR'">
@@ -88,23 +84,11 @@
     </div>
   </div>
 </div>
-<div class="div-ident-parceiro row mt-3">
+<div class="div-ident-parceiro pr-4 mt-3">
   <h2>
     <i class="bi bi-people"></i>
     Ponto de Rejeição
   </h2>
-  <div class="dados-parceiro col razao-social">
-    <h2 class="mr-2">
-      Descrição
-    </h2>
-    <p-editor
-            [(ngModel)]="this.nonComplicanceService.nc.text_area_reject_point"
-            [style]="{ height: '144px', border: '1px solid #dddddd' }"
-            [readonly]="true"
-    >
-      <ng-template pTemplate="header" hidden> </ng-template>
-    </p-editor>
-  </div>
   <div class="dados-parceiro col">
     <div class="dados-contato">
       <div class="contato-info d-flex flex-row" *ngIf="this.nonComplicanceService.nc?.num_lote">
@@ -130,9 +114,13 @@
       <div class="contato-info d-flex flex-row" *ngIf="this.nonComplicanceService.nc?.instruction?.code">
         <i class="bi bi-123"></i>
         <div>
-          <span class="info-titulo">Número da IT</span>
+          <span class="info-titulo">IT</span>
           <br />
-          <span class="info-dados">{{ this.nonComplicanceService.nc?.instruction?.code || "0" }}</span>
+          <span class="info-dados">{{ "Numero: " + this.nonComplicanceService.nc?.instruction?.code || "0" }}</span>
+          <br />
+          <span class="info-dados">{{ "Descrição: " + this.nonComplicanceService.nc?.instruction?.description || "0" }}</span>
+          <br />
+          <span class="info-dados">{{ "Revisão: " + this.nonComplicanceService.nc?.instruction?.rev || "0" }}</span>
         </div>
       </div>
       <div class="contato-info d-flex flex-row" *ngIf="this.nonComplicanceService.nc?.procedure">
@@ -144,6 +132,15 @@
         </div>
       </div>
     </div>
+  </div>
+  <div class="dados-parceiro col razao-social">
+    <p-editor
+            [(ngModel)]="this.nonComplicanceService.nc.text_area_reject_point"
+            [style]="{ height: '100%', border: '0px solid #dddddd'}"
+            [readonly]="true"
+    >
+      <ng-template pTemplate="header" hidden> </ng-template>
+    </p-editor>
   </div>
 </div>
 
