--- a/src/app/pages/ncs/about/view-nc/identify-nc/view-identify-n-c.component.css
+++ b/src/app/pages/ncs/about/view-nc/identify-nc/view-identify-n-c.component.css
@@ -97,7 +97,6 @@
   padding: 13px;
 }
 
-::ng-deep .ql-toolbar.ql-snow {
-  padding: 0px;
-  border: none;
+:host ::ng-deep .ql-toolbar.ql-snow {
+  display: none;
 }
