--- a/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.html
+++ b/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.html
@@ -10,7 +10,7 @@
         <div>
           <span class="info-titulo">Número</span>
           <br />
-          <span class="info-dados">{{ ncID }}</span>
+          <span class="info-dados">{{ this.nonComplicanceService.nc?.code || "XXXX.XX"}}</span>
         </div>
       </div>
       <div class="contato-info d-flex flex-row">
