--- a/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.html
+++ b/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.html
@@ -26,6 +26,7 @@
           (click)="nextStep()"
           [disabled]="disableButton()"
           class="btn btn-dark btn-sm"
+          [routerLink]="getLink()"
         >
           {{ getNextPageBtnLabel() }}
           <i [class]="getNextPageBtnIcon()"></i>
