--- a/src/app/pages/ncs/about/header/header.component.html
+++ b/src/app/pages/ncs/about/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header-create-nc">
     <div class="p-0">
         <div class="d-flex align-items-center">
-            <button type="button" class="btn btn-dark">
+            <button type="button" class="btn btn-dark" routerLink="/ncs">
                 <i class="pi pi-home"></i>
                 Início
             </button>
