--- a/src/app/pages/ncs/about/view-nc/products-and-points/view-products-and-points.component.html
+++ b/src/app/pages/ncs/about/view-nc/products-and-points/view-products-and-points.component.html
@@ -79,47 +79,45 @@
     <i class="bi bi-people"></i>
     Ponto de Rejeição
   </h2>
-  <div class="dados-parceiro col">
-    <div class="dados-contato">
-      <div class="contato-info d-flex flex-row" *ngIf="aboutSrvc.nc?.num_lote">
-        <i class="bi bi-123"></i>
-        <div>
-          <span class="info-titulo">Número do Lote</span>
-          <br />
-          <span class="info-dados">{{
-            aboutSrvc.nc?.num_lote || "0"
-            }}</span>
-        </div>
+  <div class="d-flex dados-contato mb-3 ">
+    <div class="contato-info d-flex flex-row mb-5 mr-5" *ngIf="aboutSrvc.nc?.num_lote">
+      <i class="bi bi-123"></i>
+      <div>
+        <span class="info-titulo">Número do Lote</span>
+        <br />
+        <span class="info-dados">{{
+          aboutSrvc.nc?.num_lote || "0"
+          }}</span>
       </div>
-      <div class="contato-info d-flex flex-row" *ngIf="aboutSrvc.nc?.num_ordem_compra">
-        <i class="bi bi-123"></i>
-        <div>
-          <span class="info-titulo">Quantidade em Não Conformidade</span>
-          <br />
-          <span class="info-dados">{{
-            aboutSrvc.nc?.num_ordem_compra || "0"
-            }}</span>
-        </div>
+    </div>
+    <div class="contato-info d-flex flex-row mb-5 mr-5" *ngIf="aboutSrvc.nc?.num_ordem_compra">
+      <i class="bi bi-123"></i>
+      <div>
+        <span class="info-titulo">Quantidade em Não Conformidade</span>
+        <br />
+        <span class="info-dados">{{
+          aboutSrvc.nc?.num_ordem_compra || "0"
+          }}</span>
       </div>
-      <div class="contato-info d-flex flex-row" *ngIf="aboutSrvc.nc?.instruction?.code">
-        <i class="bi bi-123"></i>
-        <div>
-          <span class="info-titulo">IT</span>
-          <br />
-          <span class="info-dados">{{ "Numero: " + aboutSrvc.nc?.instruction?.code || "0" }}</span>
-          <br />
-          <span class="info-dados">{{ "Descrição: " + aboutSrvc.nc?.instruction?.description || "0" }}</span>
-          <br />
-          <span class="info-dados">{{ "Revisão: " + aboutSrvc.nc?.instruction?.rev || "0" }}</span>
-        </div>
+    </div>
+    <div class="contato-info d-flex flex-row mb-5 mr-5" *ngIf="aboutSrvc.nc?.instruction?.code">
+      <i class="bi bi-123"></i>
+      <div>
+        <span class="info-titulo">IT</span>
+        <br />
+        <span class="info-dados">{{ "Numero: " + aboutSrvc.nc?.instruction?.code || "0" }}</span>
+        <br />
+        <span class="info-dados">{{ "Descrição: " + aboutSrvc.nc?.instruction?.description || "0" }}</span>
+        <br />
+        <span class="info-dados">{{ "Revisão: " + aboutSrvc.nc?.instruction?.rev || "0" }}</span>
       </div>
-      <div class="contato-info d-flex flex-row" *ngIf="aboutSrvc.nc?.procedure">
-        <i class="bi bi-123"></i>
-        <div>
-          <span class="info-titulo">Número PR</span>
-          <br />
-          <span class="info-dados">{{ aboutSrvc.nc?.procedure?.code|| "0" }}</span>
-        </div>
+    </div>
+    <div class="contato-info d-flex flex-row mb-5 mr-5" *ngIf="aboutSrvc.nc?.procedure">
+      <i class="bi bi-123"></i>
+      <div>
+        <span class="info-titulo">Número PR</span>
+        <br />
+        <span class="info-dados">{{ aboutSrvc.nc?.procedure?.code|| "0" }}</span>
       </div>
     </div>
   </div>
