--- a/src/app/header/menu/menu.component.html
+++ b/src/app/header/menu/menu.component.html
@@ -1,4 +1,8 @@
+
 <p-menubar [model]="items">
+  <ng-template pTemplate="start">
+    <img style="height: 50px; width: auto;" src="../assets/images/logo3.png" alt="Electroson">
+  </ng-template>
   <ng-template pTemplate="end">
     <img class="avatar" src="../assets/images/avatar.png" alt="Avatar" />
     <span class="designation">Nome Sobrenome<br />Matrícula - Função</span>
