--- a/src/app/pages/ncs/list/ncs-list.component.html
+++ b/src/app/pages/ncs/list/ncs-list.component.html
@@ -1,16 +1,16 @@
-<h2>Início</h2>
-<p>Visualize ou crie não conformidades</p>
+<p class="title">Início</p>
+<p class="subtitle">Visualize ou crie não conformidades</p>
 
 <span class="p-input-icon-left">
     <i class="pi pi-search"></i>
     <input pInputText type="text" (input)="applyFilterGlobal($event, 'contains')" placeholder="Global Search" />
 </span>
 <span style="float:right">
-  <p-button label="Nova Não Conformidade" icon="pi pi-check" styleClass="p-button-sm p-button-secondary" icon="pi pi-plus" iconPos="right" routerLink="/ncs/create"></p-button>
+  <button pbutton icon="pi pi-check"  class=" btn btn-primary btn-primary-color" icon="pi pi-plus" iconPos="right" routerLink="/ncs/create">Nova Não Conformidade <i class="bi bi-file-earmark-plus"></i> </button>
 </span>
 
 <div style="margin-top: 10px;">
-<p-table  #dt [globalFilterFields]="['numero','parceiro','emissor', 'estado']" [value]="listNcs" [columns]="cols" [paginator]="true" [rows]="rows" [(first)]="first" [showCurrentPageReport]="true" responsiveLayout="scroll"
+<p-table  #dt [globalFilterFields]="['numero','parceiro','emissor', 'estado']" [value]="listNcs" [columns]="cols" [paginator]="true" [rows]="rows" [(first)]="first" [totalRecords]="totalRecords" [showCurrentPageReport]="true" responsiveLayout="scroll"
 currentPageReportTemplate="Exibindo de {first} a {last} de {totalRecords} registros" [rowsPerPageOptions]="[5,10,25,50]" [filterDelay]="0">
 
   <ng-template pTemplate="header">
@@ -47,6 +47,7 @@ currentPageReportTemplate="Exibindo de {first} a {last} de {totalRecords} regist
       <th style="width: 1rem"></th>
       <th style="width: 1rem"></th>
       <th style="width: 1rem"></th>
+      <th style="width: 1rem"></th>
   </tr>
 
 </ng-template>
@@ -76,15 +77,19 @@ currentPageReportTemplate="Exibindo de {first} a {last} de {totalRecords} regist
       </td>
 
       <td style="text-align: center">
-          <button pButton type="button" class="p-button-secondary" icon="pi pi-info-circle" routerLink="/ncs/about/{{Nc.id}}"></button>
+          <a style="color: black;" type="button" routerLink="/ncs/about/{{Nc.id}}"><i class="bi bi-info-circle"></i></a>
       </td>
 
       <td style="text-align: center">
-        <button pButton type="button" class="p-button-secondary" icon="pi pi-trash" (click)="delete(Nc.id)"></button>
+        <a type="button" (click)="edit(Nc.id, Nc.estado)"><i class="bi bi-file-richtext"></i></a>
       </td>
 
       <td style="text-align: center">
-        <button pButton type="button" class="p-button-secondary" icon="pi pi-briefcase" (click)="archived(Nc.id)"></button>
+        <a type="button" (click)="delete(Nc.id)"><i class="bi bi-trash"></i></a>
+      </td>
+
+      <td style="text-align: center">
+        <a type="button" (click)="archived(Nc.id)"><i class="bi bi-archive"></i></a>
       </td>
 
   </tr>
