visualizar pdf feito

--- a/src/app/pages/ncs/about/view-nc/identify-nc/view-identify-n-c.component.css
+++ b/src/app/pages/ncs/about/view-nc/identify-nc/view-identify-n-c.component.css
@@ -11,6 +11,10 @@
   margin-left: -15px;
 }
 
+button{
+  background-color: transparent;border: none;
+}
+
 .div-ident-parceiro {
   margin: 0;
   width: 100%;
